switch to the docking branch
tried to mess with the opengl viewport too

--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -4,7 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Triangle Position/Color]
-Pos=60,60
-Size=96,100
+Pos=495,356
+Size=232,118
 Collapsed=0
+
+[Docking][Data]
 
