able to create triangles and manipulate them individually

--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -4,8 +4,43 @@ Size=400,400
 Collapsed=0
 
 [Window][Triangle Position/Color]
-Pos=495,356
-Size=232,118
+Pos=521,116
+Size=407,548
+Collapsed=0
+
+[Window][Scene Heirarchy]
+Pos=815,406
+Size=290,100
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=505,19
+Size=550,680
+Collapsed=1
+
+[Window][Delete?]
+Pos=444,307
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=395,274
+Size=409,172
+Collapsed=0
+
+[Window][Triangle ]
+Pos=186,393
+Size=274,145
+Collapsed=0
+
+[Window][riangle ]
+Pos=472,429
+Size=279,139
+Collapsed=0
+
+[Window][iangle ]
+Pos=340,573
+Size=279,109
 Collapsed=0
 
 [Docking][Data]
