--- a/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
+++ b/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
@@ -89,14 +89,19 @@
     <ClInclude Include="src\imgui\imstb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\color.frag">
+    <None Include="src\shaders\color.frag">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="src\color.vert">
+    <None Include="src\shaders\color.vert">
       <Filter>Source Files</Filter>
     </None>
     <None Include="src\imgui\imgui.ini" />
+    <None Include="src\shaders\basic.vert" />
+    <None Include="src\shaders\basic.frag" />
   </ItemGroup>
 </Project>
