--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -9,14 +9,15 @@ Size=407,548
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=815,406
-Size=290,100
+Pos=1416,401
+Size=290,182
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=505,19
+Pos=1219,120
 Size=550,680
 Collapsed=1
+DockId=0x00000002,0
 
 [Window][Delete?]
 Pos=444,307
@@ -43,5 +44,141 @@ Pos=340,573
 Size=279,109
 Collapsed=0
 
+[Window][Triangle 0]
+Pos=1064,721
+Size=385,235
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Triangle 1]
+Pos=1064,721
+Size=385,235
+Collapsed=0
+DockId=0x00000005,1
+
+[Window][Triangle 2]
+Pos=1064,721
+Size=385,235
+Collapsed=0
+DockId=0x00000005,2
+
+[Window][Cube 0]
+Pos=1497,718
+Size=272,243
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Cube 1]
+Pos=1497,718
+Size=272,243
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Example: Simple layout]
+Pos=94,83
+Size=776,714
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1932,1046
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=626,300
+Size=485,414
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=1497,718 Size=272,243 Selected=0x541CDA8F
+DockNode  ID=0x00000002 Pos=1219,120 Size=550,680 Selected=0x08F8367F
+DockNode  ID=0x00000005 Pos=1064,721 Size=385,235 Selected=0x8B9CA9B3
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=1932,1008 CentralNode=1
 
