--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -9,15 +9,14 @@ Size=407,548
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=1416,401
-Size=290,182
+Pos=0,0
+Size=296,574
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1219,120
+Pos=33,629
 Size=550,680
 Collapsed=1
-DockId=0x00000002,0
 
 [Window][Delete?]
 Pos=444,307
@@ -45,7 +44,7 @@ Size=279,109
 Collapsed=0
 
 [Window][Triangle 0]
-Pos=1064,721
+Pos=470,393
 Size=385,235
 Collapsed=0
 DockId=0x00000005,0
@@ -63,13 +62,13 @@ Collapsed=0
 DockId=0x00000005,2
 
 [Window][Cube 0]
-Pos=1497,718
+Pos=890,205
 Size=272,243
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Cube 1]
-Pos=1497,718
+Pos=890,205
 Size=272,243
 Collapsed=0
 DockId=0x00000001,1
@@ -90,7 +89,6 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1932,1046
 Collapsed=0
 
@@ -102,6 +100,11 @@ Collapsed=0
 [Window][Example: Log]
 Pos=60,60
 Size=500,400
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=356,82
+Size=779,512
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -177,8 +180,6 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=1497,718 Size=272,243 Selected=0x541CDA8F
-DockNode  ID=0x00000002 Pos=1219,120 Size=550,680 Selected=0x08F8367F
-DockNode  ID=0x00000005 Pos=1064,721 Size=385,235 Selected=0x8B9CA9B3
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=1932,1008 CentralNode=1
+DockNode  ID=0x00000001 Pos=890,205 Size=272,243 Selected=0x541CDA8F
+DockNode  ID=0x00000005 Pos=470,393 Size=385,235 Selected=0x8B9CA9B3
 
