objects can be moved around and deleted

--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -9,13 +9,13 @@ Size=407,548
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=0,0
-Size=296,574
+Pos=0,19
+Size=300,701
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=33,629
-Size=550,680
+Pos=307,457
+Size=581,445
 Collapsed=1
 
 [Window][Delete?]
@@ -105,6 +105,16 @@ Collapsed=0
 [Window][Dear ImGui Debug Log]
 Pos=356,82
 Size=779,512
+Collapsed=0
+
+[Window][Inspector]
+Pos=900,19
+Size=300,701
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=401,11
+Size=353,695
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
