added scale to objects
could probably get rid of the 2d object rendering as it is and make 2d objects just have 0 zscale by default and let people move then around the scene as they see fit

--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -117,6 +117,35 @@ Pos=401,11
 Size=353,695
 Collapsed=0
 
+[Window][Example: Documents]
+Pos=536,93
+Size=300,536
+Collapsed=0
+
+[Window][Eggplant]
+Pos=544,189
+Size=142,213
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Lettuce]
+Pos=544,404
+Size=284,217
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Carrot]
+Pos=544,404
+Size=284,217
+Collapsed=0
+DockId=0x00000004,1
+
+[Window][Tomato]
+Pos=688,189
+Size=140,213
+Collapsed=0
+DockId=0x00000007,0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -190,6 +219,11 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=890,205 Size=272,243 Selected=0x541CDA8F
-DockNode  ID=0x00000005 Pos=470,393 Size=385,235 Selected=0x8B9CA9B3
+DockNode      ID=0x00000001 Pos=890,205 Size=272,243 Selected=0x541CDA8F
+DockNode      ID=0x00000005 Pos=470,393 Size=385,235 Selected=0x8B9CA9B3
+DockSpace     ID=0xA086D808 Pos=544,189 Size=284,432 Split=Y Selected=0x55C95B2C
+  DockNode    ID=0x00000003 Parent=0xA086D808 SizeRef=284,213 Split=X Selected=0x55C95B2C
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=142,213 Selected=0x55C95B2C
+    DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=140,213 Selected=0x95D38505
+  DockNode    ID=0x00000004 Parent=0xA086D808 SizeRef=284,217 CentralNode=1 Selected=0x15EF3519
 
