allow SceneObject duplication, rework textures to be by SceneObject

--- a/GLFW_ImGui/GLFW_ImGui.vcxproj
+++ b/GLFW_ImGui/GLFW_ImGui.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\headers\camera.h" />
+    <ClInclude Include="src\headers\imfilebrowser.h" />
     <ClInclude Include="src\imgui\imconfig.h" />
     <ClInclude Include="src\imgui\imgui.h" />
     <ClInclude Include="src\imgui\imgui_impl_glfw.h" />
