--- a/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
+++ b/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="src\headers\object_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\headers\imfilebrowser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\color.frag">
