--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -14,8 +14,8 @@ Size=300,701
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,441
-Size=300,279
+Pos=302,346
+Size=589,284
 Collapsed=0
 
 [Window][Delete?]
@@ -145,6 +145,11 @@ Pos=688,189
 Size=140,213
 Collapsed=0
 DockId=0x00000007,0
+
+[Window][file browser##filebrowser_140699402270224]
+Pos=312,114
+Size=700,450
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
