--- a/GLFW_ImGui/src/imgui.ini
+++ b/GLFW_ImGui/src/imgui.ini
@@ -151,6 +151,16 @@ Pos=312,114
 Size=700,450
 Collapsed=0
 
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=300,350
+Collapsed=0
+
+[Window][Assets]
+Pos=0,370
+Size=300,350
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
