--- a/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
+++ b/GLFW_ImGui/GLFW_ImGui.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\object_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\assets_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\utilities\stb_image.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\headers\imfilebrowser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\headers\assets_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
